Start restyling of application

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <app-header></app-header>
 <div class="container">
   <app-partymanager></app-partymanager>
+  <nz-divider nzText="Summary" nzOrientation="left"></nz-divider>
   <app-summary></app-summary>
+  <nz-divider nzText="Schedule" nzOrientation="left"></nz-divider>
   <app-schedule></app-schedule>
 </div>
