--- a/src/app/summary/summary.component.html
+++ b/src/app/summary/summary.component.html
@@ -1,7 +1,4 @@
 <div class="row">
-  <h2 i18n="Summary Header">Summary</h2>
-</div>
-<div class="row">
   <div *ngIf="false" style="display: flex; flex-wrap: wrap; margin: 0 0 1% 0">
     <h4 style="margin-right: 1%">Current party ascension rank: </h4>
     <nz-input-number [(ngModel)]="ascensionStage"
@@ -26,16 +23,16 @@
           <nz-list *ngIf="member.ascension !== 6; else FullAscensionTpl"
                    nzSize="small">
             <nz-list-item>
-              <nz-list-item-meta [nzAvatar]="materialService.getMaterialsMap.get('mora').icon">
+              <nz-list-item-meta [nzAvatar]="materials.get('mora').icon">
                 <nz-list-item-meta-title>
-                  x{{ formatNumber(characterService.characterMap.get(member.character_id).ascension[member.ascension].cost) }} Mora
+                  x{{ formatNumber(characters.get(member.character_id).ascension[member.ascension].cost) }} Mora
                 </nz-list-item-meta-title>
               </nz-list-item-meta>
             </nz-list-item>
-            <nz-list-item *ngFor="let material of characterService.characterMap.get(member.character_id).ascension[member.ascension].materials">
+            <nz-list-item *ngFor="let material of characters.get(member.character_id).ascension[member.ascension].materials">
               <nz-list-item-meta [nzAvatar]="material.material.icon">
                 <nz-list-item-meta-title>
-                  x{{ material.amount }} {{ localizationService.translationsMap.get(material.material_id).name }}
+                  x{{ material.amount }} {{ localization.get(material.material_id).name }}
                 </nz-list-item-meta-title>
               </nz-list-item-meta>
             </nz-list-item>
