--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,18 +1,34 @@
-<nav class="">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a href="#" class="navbar-brand">Genshin Impact Party Manager</a>
-    </div>
-    <div class="collapse navbar-collapse">
-      <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown" appDropdown>
-          <a href="#" class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Save Data</a></li>
-            <li><a href="#">Fetch Data</a></li>
-          </ul>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
+<!--<nav class="">-->
+<!--  <div class="container-fluid">-->
+<!--    <div class="navbar-header">-->
+<!--      <a href="#" class="navbar-brand">Genshin Impact Party Manager</a>-->
+<!--    </div>-->
+<!--    <div class="collapse navbar-collapse">-->
+<!--      <ul class="nav navbar-nav navbar-right">-->
+<!--        <li class="dropdown" appDropdown>-->
+<!--          <a href="#" class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>-->
+<!--          <ul class="dropdown-menu">-->
+<!--            <li><a href="#">Save Data</a></li>-->
+<!--            <li><a href="#">Fetch Data</a></li>-->
+<!--          </ul>-->
+<!--        </li>-->
+<!--      </ul>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--</nav>-->
+
+<nz-page-header>
+  <nz-avatar nzShape="square" nzSize="large" nz-page-header-avatar nzSrc="assets/favicon.png"></nz-avatar>
+  <nz-page-header-title>
+    Genshin Impact Party Calculator
+  </nz-page-header-title>
+  <nz-page-header-subtitle>
+
+  </nz-page-header-subtitle>
+  <nz-page-header-tags>
+
+  </nz-page-header-tags>
+  <nz-page-header-extra>
+
+  </nz-page-header-extra>
+</nz-page-header>
