--- a/src/app/partymanager/party/party.component.html
+++ b/src/app/partymanager/party/party.component.html
@@ -1,62 +1,58 @@
 <div class="row">
-    <div class="pull-left">
-      <h3 i18n="Add party member">Add a party member: </h3>
-      <nz-select nzShowSearch
-                 nzPlaceHolder="Select a character"
-                 class="pseudo-fullwidth"
-                 [(ngModel)]="selectValue"
-                 (ngModelChange)="onCharacterSelected($event)"
-                 [nzDisabled]="party.length > 9"
+  <div class="col-xs-12">
+    <h3 i18n="Add party member">Add a party member: </h3>
+    <nz-select nzShowSearch
+               nzPlaceHolder="Select a character"
+               class="pseudo-fullwidth"
+               [(ngModel)]="selectValue"
+               (ngModelChange)="onCharacterSelected($event)"
+               [nzDisabled]="party.length > 9"
+    >
+      <nz-option nzCustomContent
+                 *ngFor="let character of characters.characters"
+                 [nzLabel]="localization.get(character.id).name"
+                 [nzValue]="character"
+                 [nzDisabled]="party.contains(character.id)"
       >
-        <nz-option nzCustomContent
-                   *ngFor="let character of characters.characters"
-                   [nzLabel]="localization.get(character.id).name"
-                   [nzValue]="character"
-                   [nzDisabled]="party.contains(character.id)"
-        >
-          <div>
-            <div class="pull-left">
-              <img [src]="'assets/icons/' + character.id + '.png'"
-                   [alt]="character.id"
-                   style="max-height: 20px;">
-              {{ localization.get(character.id).name }}
-              <fa-icon *ngIf="character.isNew"
-                       [icon]="['fas', 'bell']"
-                       style="color: gold;"></fa-icon>
-              <fa-icon *ngIf="party.contains(character.id)"
-                       [icon]="['fas','exclamation-triangle']"></fa-icon>
-            </div>
-            <div class="pull-right">
-              <img [src]="'assets/elements/' + character.element + '.png'"
-                   [alt]="character.element"
-                   style="max-height: 20px;">
-              <img [src]="'assets/weapontypes/' + character.weaponType + '.png'"
-                   [alt]="character.weaponType"
-                   style="max-height: 20px;">
-            </div>
+        <div>
+          <div class="pull-left">
+            <img [src]="'assets/icons/' + character.id + '.png'"
+                 [alt]="character.id"
+                 style="max-height: 20px;">
+            {{ localization.get(character.id).name }}
+            <fa-icon *ngIf="character.isNew"
+                     [icon]="['fas', 'bell']"
+                     style="color: gold;"></fa-icon>
+            <fa-icon *ngIf="party.contains(character.id)"
+                     [icon]="['fas','exclamation-triangle']"></fa-icon>
           </div>
-        </nz-option>
-      </nz-select>
-    </div>
-    <div class="pull-right">
-      <button nz-button (click)="onSaveParty()">Save</button>
-    </div>
+          <div class="pull-right">
+            <img [src]="'assets/elements/' + character.element + '.png'"
+                 [alt]="character.element"
+                 style="max-height: 20px;">
+            <img [src]="'assets/weapontypes/' + character.weaponType + '.png'"
+                 [alt]="character.weaponType"
+                 style="max-height: 20px;">
+          </div>
+        </div>
+      </nz-option>
+    </nz-select>
+  </div>
 </div>
 <nz-divider></nz-divider>
-
 <div class="row">
   <div class="col-xs-12">
-    <div class="list-group-item clearfix">
-      <div class="pull-left">
-        <h4>A party</h4>
-      </div>
-      <div class="pull-right">
-        <nz-switch nzSize="small" nz-tooltip="Don't ask again" [(ngModel)]="forceDelete"></nz-switch>
-      </div>
+    <div class="list-group-item clearfix" style="display: flex; flex-wrap: wrap; align-items: center">
+        <h4 i18n="Party member list header" style="flex-grow: 4">Your party</h4>
+        <nz-switch nzSize="small"
+                   nz-tooltip="Don't ask again"
+                   [(ngModel)]="forceDelete">
+        </nz-switch>
     </div>
     <div *ngIf="party.members.length != 0; else emptyParty">
       <app-partymember *ngFor="let member of party.members"
                        [member]="member"
+                       (memberDisabled)="onMemberChanged()"
                        (memberSelected)="onSelected(member)"
                        (memberRemoved)="onRemoved(member)"
                        [forceDelete]="forceDelete"
@@ -64,17 +60,18 @@
       </app-partymember>
     </div>
     <ng-template #emptyParty>
-      <nz-empty [nzNotFoundFooter]="footerTpl">
-        <ng-template #footerTpl>
-          <button nz-button
-                  nzType="primary"
-                  (click)="addDefaultParty()"
-                  i18n="Add default party">
-            Add default party
-          </button>
-        </ng-template>
-      </nz-empty>
+      <div>
+        <nz-empty [nzNotFoundFooter]="footerTpl">
+          <ng-template #footerTpl>
+            <button nz-button
+                    nzType="primary"
+                    (click)="onAddDefaultData()"
+                    i18n="Add default party">
+              Add default party
+            </button>
+          </ng-template>
+        </nz-empty>
+      </div>
     </ng-template>
   </div>
 </div>
-<nz-divider></nz-divider>
