--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -30,6 +30,7 @@
   </nz-page-header-tags>
   <nz-page-header-extra>
     <a href='https://ko-fi.com/T6T11B137' target='_blank'><img height='36' style='border:0px;height:36px;' src='https://cdn.ko-fi.com/cdn/kofi2.png?v=2' border='0' alt='Buy Me a Coffee at ko-fi.com' /></a>
+    <a href="https://discord.gg/MUrGf5Px"><img height='36' style='border:0px;height:36px;' src="assets/DiscordLogo.png" alt="Discord"></a>
     <button nz-button nz-dropdown [nzDropdownMenu]="menu" nzPlacement="bottomRight">
       Manage
       <fa-icon [icon]="['fas','angle-down']" style="margin-left: 5px"></fa-icon>
