--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,22 +1,3 @@
-<!--<nav class="">-->
-<!--  <div class="container-fluid">-->
-<!--    <div class="navbar-header">-->
-<!--      <a href="#" class="navbar-brand">Genshin Impact Party Manager</a>-->
-<!--    </div>-->
-<!--    <div class="collapse navbar-collapse">-->
-<!--      <ul class="nav navbar-nav navbar-right">-->
-<!--        <li class="dropdown" appDropdown>-->
-<!--          <a href="#" class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>-->
-<!--          <ul class="dropdown-menu">-->
-<!--            <li><a href="#">Save Data</a></li>-->
-<!--            <li><a href="#">Fetch Data</a></li>-->
-<!--          </ul>-->
-<!--        </li>-->
-<!--      </ul>-->
-<!--    </div>-->
-<!--  </div>-->
-<!--</nav>-->
-
 <nz-page-header>
   <nz-avatar nzShape="square" nzSize="large" nz-page-header-avatar nzSrc="assets/favicon.png"></nz-avatar>
   <nz-page-header-title>
@@ -29,8 +10,18 @@
 
   </nz-page-header-tags>
   <nz-page-header-extra>
-    <a href='https://ko-fi.com/T6T11B137' target='_blank'><img height='36' style='border:0px;height:36px;' src='https://cdn.ko-fi.com/cdn/kofi2.png?v=2' border='0' alt='Buy Me a Coffee at ko-fi.com' /></a>
-    <a href="https://discord.gg/MUrGf5Px"><img height='36' style='border:0px;height:36px;' src="assets/DiscordLogo.png" alt="Discord"></a>
+    <a href='https://ko-fi.com/T6T11B137' target='_blank'>
+      <img height='36'
+           style='border:0; height:36px;'
+           src='https://cdn.ko-fi.com/cdn/kofi2.png?v=2'
+           alt='Buy Me a Coffee at ko-fi.com'/>
+    </a>
+    <a href="https://discord.gg/MUrGf5Px" target='_blank'>
+      <img height='36'
+           style='border:0; height:36px;'
+           src="assets/DiscordLogo.png"
+           alt="Discord"/>
+    </a>
     <button nz-button nz-dropdown [nzDropdownMenu]="menu" nzPlacement="bottomRight">
       Manage
       <fa-icon [icon]="['fas','angle-down']" style="margin-left: 5px"></fa-icon>
