Add materials and assets for weapon ascensions, add blanks to translations

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,7 +4,7 @@
     Genshin Impact Party Calculator
   </nz-page-header-title>
   <nz-page-header-subtitle>
-
+    Work in progress! Come back!
   </nz-page-header-subtitle>
   <nz-page-header-tags>
 
