Fix offscreen button on mobile

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <nz-page-header>
   <nz-avatar nzShape="square" nzSize="large" nz-page-header-avatar nzSrc="assets/favicon.png"></nz-avatar>
   <nz-page-header-title>
-    Genshin Impact Party Calculator
+    Genshin Party Calculator
   </nz-page-header-title>
   <nz-page-header-subtitle>
     Work in progress! Come back!
@@ -10,6 +10,7 @@
 
   </nz-page-header-tags>
   <nz-page-header-extra>
+    <div style="display: flex;">
     <a href='https://ko-fi.com/T6T11B137' target='_blank'>
       <img height='36'
            style='border:0; height:36px;'
@@ -33,5 +34,6 @@
         <li nz-menu-item>Settings</li>
       </ul>
     </nz-dropdown-menu>
+    </div>
   </nz-page-header-extra>
 </nz-page-header>
