--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -17,7 +17,7 @@
            src='https://cdn.ko-fi.com/cdn/kofi2.png?v=2'
            alt='Buy Me a Coffee at ko-fi.com'/>
     </a>
-    <a href="https://discord.gg/MUrGf5Px" target='_blank'>
+    <a href="https://discord.gg/4xJqpKfAb6" target='_blank'>
       <img height='36'
            style='border:0; height:36px;'
            src="assets/DiscordLogo.png"
