--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,18 @@
 <app-header></app-header>
 <div class="container">
+  <div *ngIf="false" class="row" style="display: block; margin-left: auto; margin-right: auto; width: 50%; padding: 10px;">
+    <img src="https://via.placeholder.com/468x60?text=468x60+Full+Banner" alt="Placeholder">
+  </div>
   <app-partymanager></app-partymanager>
   <nz-divider nzText="Summary" nzOrientation="left"></nz-divider>
+  <div *ngIf="false" class="row" style="display: block; margin-left: auto; margin-right: auto; width: 50%; padding: 10px;">
+    <img src="https://via.placeholder.com/468x60?text=468x60+Full+Banner" alt="Placeholder">
+  </div>
   <app-summary></app-summary>
   <nz-divider nzText="Schedule" nzOrientation="left"></nz-divider>
   <app-schedule></app-schedule>
+  <div *ngIf="false" class="row" style="display: block; margin-left: auto; margin-right: auto; width: 50%; padding: 10px;">
+    <img src="https://via.placeholder.com/468x60?text=468x60+Full+Banner" alt="Placeholder">
+  </div>
+  <app-footer *ngIf="false"></app-footer>
 </div>
