--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,13 +11,13 @@
   </nz-page-header-tags>
   <nz-page-header-extra>
     <div style="display: flex;">
-      <a href='https://ko-fi.com/T6T11B137' target='_blank'>
+      <a href='https://ko-fi.com/T6T11B137' target='_blank' (click)="onKoFiClick()">
         <img height='36'
              style='border:0; height:36px;'
              src='https://cdn.ko-fi.com/cdn/kofi2.png?v=2'
              alt='Buy Me a Coffee at ko-fi.com'/>
       </a>
-      <a href="https://discord.gg/4xJqpKfAb6" target='_blank'>
+      <a href="https://discord.gg/4xJqpKfAb6" target='_blank' (click)="onDiscordClick()">
         <img height='36'
              style='border:0; height:36px;'
              src="assets/DiscordLogo.png"
