Add header collapse for progress and news

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <app-header></app-header>
 <div class="container">
+  <app-progress>
+  </app-progress>
   <div *ngIf="showAds" class="row" style="display: block; margin-left: auto; margin-right: auto; width: 50%; padding: 10px;">
     <img src="https://via.placeholder.com/468x60?text=468x60+Full+Banner" alt="Placeholder">
   </div>
