--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -22,14 +22,14 @@
              style='border:0; height:36px;'
              src="assets/DiscordLogo.png"
              alt="Discord"/>
-      </a>
+      </a>-->
       <button nz-button nz-dropdown [nzDropdownMenu]="menu" nzPlacement="bottomRight">
         Manage
         <fa-icon [icon]="['fas','angle-down']" style="margin-left: 5px"></fa-icon>
       </button>
       <nz-dropdown-menu #menu="nzDropdownMenu">
         <ul nz-menu>
-          <li nz-menu-item>Signin</li>
+          <li nz-menu-item>Sign In</li>
           <li nz-menu-divider></li>
           <li nz-menu-item>Settings</li>
         </ul>
